Fixed the Horizontal Scrolling.

--- a/style.css
+++ b/style.css
@@ -129,7 +129,10 @@ table {
 
 html {
   background: #757575;
+  width: 100%;
+  overflow-x: hidden;
 }
+
 
 .global__Grid {
   display: grid;
